--- a/RoomBookingSysytem1/Views/Shared/_AccountsLayout.cshtml
+++ b/RoomBookingSysytem1/Views/Shared/_AccountsLayout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Sign up", "Signup", "Accounts", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Sign in", "Signin", "Accounts", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Client View", "Index", "Client", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
