--- a/RoomBookingSysytem1/Views/Shared/_Layout.cshtml
+++ b/RoomBookingSysytem1/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("About us", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contacts", "Contacts", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Contacts", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Sign up", "Signup", "Accounts", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
