--- a/RoomBookingSysytem1/Views/Client/Index.cshtml
+++ b/RoomBookingSysytem1/Views/Client/Index.cshtml
@@ -4,5 +4,18 @@
     Layout = "~/Views/Shared/_ClientLayout.cshtml";
 }
 
-<h2>Index</h2>
+<body style="background-image: url('../../content/images/c101.jpg'); background-size: cover;">
+    <section class="card" style="background-color:black; color:azure">
+        <div class="card-body">
+            <h1 class="card-title" id="title">Welcome to Conference Room Booking System (CRBS)</h1>
+            <p class="card-text">
+                Welcome to our Conference Room Booking System.<br />
+                In this website you can book your favourite conference room!<br />
+                Our web services ensures the best booking services.<br />
+                We promise that our conference room will do great for your bussiness meetings.<br />
+            </p>
+        </div>
+    </section>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+</body>
 
