--- a/RoomBookingSysytem1/Views/Home/Index.cshtml
+++ b/RoomBookingSysytem1/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <body style="background-image: url('../../content/images/c101.jpg'); background-size: cover;">
@@ -14,5 +14,5 @@
             </p>
         </div>
     </section>
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 </body>
