--- a/RoomBookingSysytem1/Views/Shared/_ClientLayout.cshtml
+++ b/RoomBookingSysytem1/Views/Shared/_ClientLayout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
         <div class="container">
-            @Html.ActionLink("botSense | CRBS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("botSense | CRBS", "Index", "Client", new { area = "" }, new { @class = "navbar-brand" })
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
                 </ul>
                 <div class="nav navbar-right" style="background-color: transparent">
                     <h4 style="color: white">Welcome Sam</h4>
-                    <li>@Html.ActionLink("Logout", "RoomBooking", "Client", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Logout", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 </div>
             </div>
         </div>
