--- a/RoomBookingSysytem1/Views/Shared/_AccountsLayout.cshtml
+++ b/RoomBookingSysytem1/Views/Shared/_AccountsLayout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Sign up", "Signup", "Accounts", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Sign in", "Signin", "Accounts", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Client View", "Index", "Client", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Admin View", "Index", "Admin", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
