--- a/RoomBookingSysytem1/Views/Admin/Index.cshtml
+++ b/RoomBookingSysytem1/Views/Admin/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <body style="background-image: url('../../content/images/c101.jpg'); background-size: cover;">
-    <section class="card" style="background-color:transparent; color:black">
+    <section class="card" style="background-color: rgba(0, 0, 0, 0.5); color: white">
         <div class="card-body">
             <h1 class="card-title" id="title">Admin Dashboard</h1>
             <p class="card-text">
