--- a/RoomBookingSysytem1/Views/Client/Index.cshtml
+++ b/RoomBookingSysytem1/Views/Client/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_ClientLayout.cshtml";
 }
 
-<body style="background-image: url('../../content/images/c101.jpg'); background-size: cover;">
+<body>
     <section class="card" style="background-color:black; color:azure">
         <div class="card-body">
             <h1 class="card-title" id="title">Welcome to Conference Room Booking System (CRBS)</h1>
