--- a/RoomBookingSysytem1/Views/Home/Index.cshtml
+++ b/RoomBookingSysytem1/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home";
 }
 
-<body style="background-image: url('../../content/images/c101.jpg'); background-size: cover;">
+<body>
     <section class="card" style="background-color:black; color:azure">
         <div class="card-body">
             <h1 class="card-title" id="title">Room Booking System (CRBS)</h1>
