--- a/RoomBookingSysytem1/Views/Shared/_AccountsLayout.cshtml
+++ b/RoomBookingSysytem1/Views/Shared/_AccountsLayout.cshtml
@@ -10,30 +10,46 @@
         @Scripts.Render("~/bundles/modernizr")
     
 </head>
-<body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+<body style="background-image: url('../../content/images/C101.jpg'); background-size: cover; color:white;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" style="background-color:cadetblue">
         <div class="container">
             @Html.ActionLink("botSense | CRBS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+            <div class="collapse navbar-collapse d-lg-inline-flex justify-content-lg-between" id="navbarNav">
                 <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Sign up", "Signup", "Accounts", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Sign in", "Signin", "Accounts", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Client View", "Index", "Client", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Admin View", "Index", "Admin", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Sign up", "Signup", "Accounts", new { area = "" }, new { @class = "nav-link" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Sign in", "Signin", "Accounts", new { area = "" }, new { @class = "nav-link" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Client View", "Index", "Client", new { area = "" }, new { @class = "nav-link" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Admin View", "Index", "Admin", new { area = "" }, new { @class = "nav-link" })
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+
+    <div class="container body-content" style="margin-top: 80px">
         @RenderBody()
         <hr />
-        <footer>
-            <p style="color:aliceblue">&copy; @DateTime.Now.Year - botSense | Room Booking System</p>
+        <footer style="background-color:cadetblue; color:white; padding: 20px;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p style="font-size: 14px; color: #333;">&copy; 2023 - botSense | Room Booking System</p>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
