--- a/RoomBookingSysytem1/Views/Admin/ManageRoom.cshtml
+++ b/RoomBookingSysytem1/Views/Admin/ManageRoom.cshtml
@@ -10,12 +10,11 @@
     <div class="card-body">
         <h2>ManageRoom</h2>
 
-        @using (Html.BeginForm())
+        @using (Html.BeginForm("ManageRoom", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
-                <h4>AddRoomModel</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -67,7 +66,7 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-primary" />
+                        <input type="submit" value="Update" class="btn btn-primary" style="margin-top:20px" />
                     </div>
                 </div>
             </div>
