--- a/RoomBookingSysytem1/Views/Accounts/Signup.cshtml
+++ b/RoomBookingSysytem1/Views/Accounts/Signup.cshtml
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" ,@placeholder = "Enter Last name", @id = "Lastname", @onfocusout = "chkLastname()" } })
                 @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
             </div>
         </div>
