--- a/RoomBookingSysytem1/Views/Accounts/Signup.cshtml
+++ b/RoomBookingSysytem1/Views/Accounts/Signup.cshtml
@@ -7,7 +7,7 @@
 <section class="card" style="background-color: rgba(0, 0, 0, 0.5); color:azure">
     <div class="card-body">
         <h2>Sign up</h2>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         @Html.Raw(TempData["InsertMsg"])
         @Html.Raw(TempData["InsertErrorMsg"])
 
